; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..depsibxmibxm.c_envelope_next_tick.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..depsibxmibxm.c_envelope_next_tick.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.envelope = type { i32, i32, i32, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.envelope*, i32, i32)* @envelope_next_tick to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @envelope_next_tick(%struct.envelope* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.envelope*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.envelope* %0, %struct.envelope** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = add nsw i32 %7, 1
  store i32 %8, i32* %5, align 4
  %9 = load %struct.envelope*, %struct.envelope** %4, align 8
  %10 = getelementptr inbounds %struct.envelope, %struct.envelope* %9, i32 0, i32 4
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %23

13:                                               ; preds = %3
  %14 = load i32, i32* %5, align 4
  %15 = load %struct.envelope*, %struct.envelope** %4, align 8
  %16 = getelementptr inbounds %struct.envelope, %struct.envelope* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 8
  %18 = icmp sge i32 %14, %17
  br i1 %18, label %19, label %23

19:                                               ; preds = %13
  %20 = load %struct.envelope*, %struct.envelope** %4, align 8
  %21 = getelementptr inbounds %struct.envelope, %struct.envelope* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  store i32 %22, i32* %5, align 4
  br label %23

23:                                               ; preds = %19, %13, %3
  %24 = load %struct.envelope*, %struct.envelope** %4, align 8
  %25 = getelementptr inbounds %struct.envelope, %struct.envelope* %24, i32 0, i32 3
  %26 = load i64, i64* %25, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %41

28:                                               ; preds = %23
  %29 = load i32, i32* %6, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %41

31:                                               ; preds = %28
  %32 = load i32, i32* %5, align 4
  %33 = load %struct.envelope*, %struct.envelope** %4, align 8
  %34 = getelementptr inbounds %struct.envelope, %struct.envelope* %33, i32 0, i32 2
  %35 = load i32, i32* %34, align 8
  %36 = icmp sge i32 %32, %35
  br i1 %36, label %37, label %41

37:                                               ; preds = %31
  %38 = load %struct.envelope*, %struct.envelope** %4, align 8
  %39 = getelementptr inbounds %struct.envelope, %struct.envelope* %38, i32 0, i32 2
  %40 = load i32, i32* %39, align 8
  store i32 %40, i32* %5, align 4
  br label %41

41:                                               ; preds = %37, %31, %28, %23
  %42 = load i32, i32* %5, align 4
  ret i32 %42
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
